refactor(templates): replace onClick buttons with anchor tags in zone templates

--- a/templates/delete_zone_templ.html
+++ b/templates/delete_zone_templ.html
@@ -9,7 +9,5 @@
 
 <h5 class="mb-3" data-testid="delete-template-heading">{% trans %}Delete zone template{% endtrans %} "{{ templ_name }}"</h5>
 <p data-testid="confirmation-message">{% trans %}Are you sure?{% endtrans %}</p>
-<input type="button" class="btn btn-primary btn-sm"
-       onClick="location.href='index.php?page=delete_zone_templ&id={{ zone_templ_id }}&confirm=1'" value="{% trans %}Yes{% endtrans %}" data-testid="confirm-button">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=list_zone_templ'"
-       value="{% trans %}No{% endtrans %}" data-testid="cancel-button">
+<a href="index.php?page=delete_zone_templ&id={{ zone_templ_id }}&confirm=1" class="btn btn-primary btn-sm" data-testid="confirm-button">{% trans %}Yes{% endtrans %}</a>
+<a href="index.php?page=list_zone_templ" class="btn btn-secondary btn-sm" data-testid="cancel-button">{% trans %}No{% endtrans %}</a>
