--- a/templates/default/edit_record.html
+++ b/templates/default/edit_record.html
@@ -71,8 +71,12 @@
                         <td>
                             <input type="hidden" name="rid" value="{{ record_id }}">
                             <input type="hidden" name="zid" value="{{ zid }}">
+                            {% if display_hostname_only %}
                             <input class="form-control form-control-sm" type="text" name="name" value="{{ record['record_name'] }}">
                             .{{ idn_zone_name ?: zone_name }}
+                            {% else %}
+                            <input class="form-control form-control-sm" type="text" name="name" value="{{ record['name'] }}">
+                            {% endif %}
                         </td>
                         <td>IN</td>
                         <td>
