--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -65,19 +65,19 @@
                 {% endif %}
                 {% if perm_view_zone_own or perm_view_zone_other or perm_zone_master_add or perm_zone_slave_add %}
                 <li class="p-2">
-                    <a href="{{ base_url_prefix }}/zones/forward" class="nav-link text-{{ current_page in ['list_forward_zones', 'list_reverse_zones', 'add_zone_master', 'add_zone_slave', 'bulk_registration', 'batch_ptr_record', 'list_log_zones', 'edit', 'dns_wizard_select', 'dns_wizard_form'] ? 'primary' : 'secondary' }}"><i class="bi bi-diagram-3 fs-5"></i></a>
+                    <a href="{{ base_url_prefix }}/zones/forward" class="nav-link text-{{ current_page in ['list_forward_zones', 'list_reverse_zones', 'add_zone_master', 'add_zone_slave', 'bulk_registration', 'batch_ptr_record', 'list_log_zones', 'edit', 'dns_wizard_select', 'dns_wizard_form'] ? 'primary' : 'secondary' }}" data-testid="list-zones-link"><i class="bi bi-diagram-3 fs-5"></i></a>
                     <a class="text-{{ current_page in ['list_forward_zones', 'list_reverse_zones', 'add_zone_master', 'add_zone_slave', 'bulk_registration', 'batch_ptr_record', 'list_log_zones', 'edit', 'dns_wizard_select', 'dns_wizard_form'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
                        role="button">{% trans %}Zones{% endtrans %}</a>
                     <ul class="dropdown-menu">
                         {% if perm_view_zone_own or perm_view_zone_other %}
-                        <li><a class="dropdown-item {{ current_page == 'list_forward_zones' ? 'active' : '' }}" href="{{ base_url_prefix }}/zones/forward"><i class="bi bi-arrow-right-circle me-2"></i>{% trans %}Forward zones{% endtrans %}</a></li>
-                        <li><a class="dropdown-item {{ current_page == 'list_reverse_zones' ? 'active' : '' }}" href="{{ base_url_prefix }}/zones/reverse"><i class="bi bi-arrow-left-circle me-2"></i>{% trans %}Reverse zones{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'list_forward_zones' ? 'active' : '' }}" href="{{ base_url_prefix }}/zones/forward" data-testid="list-forward-zones-link"><i class="bi bi-arrow-right-circle me-2"></i>{% trans %}Forward zones{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'list_reverse_zones' ? 'active' : '' }}" href="{{ base_url_prefix }}/zones/reverse" data-testid="list-reverse-zones-link"><i class="bi bi-arrow-left-circle me-2"></i>{% trans %}Reverse zones{% endtrans %}</a></li>
                         <li><hr class="dropdown-divider"></li>
                         {% endif %}
                         {% if perm_zone_master_add %}
                         <li><a class="dropdown-item {{ current_page == 'add_zone_master' ? 'active' : '' }}"
-                               href="{{ base_url_prefix }}/zones/add/master"><i class="bi bi-plus-circle me-2"></i>{% trans %}Add master zone{% endtrans %}</a></li>
+                               href="{{ base_url_prefix }}/zones/add/master" data-testid="add-master-zone-link"><i class="bi bi-plus-circle me-2"></i>{% trans %}Add master zone{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_slave_add %}
                         <li><a class="dropdown-item {{ current_page == 'add_zone_slave' ? 'active' : '' }}"
