feat(installer): add 5 new language options to installer and config

--- a/install/templates/step1.html.twig
+++ b/install/templates/step1.html.twig
@@ -69,6 +69,19 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_id_ID" class="form-check-input" type="radio" name="language" value="id_ID">
+                                                <label for="language_id_ID" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-id me-2"></span> Bahasa Indonesia
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 
                                 <div class="col">
                                     <div class="card h-100 language-card">
@@ -126,6 +139,19 @@
                                     <div class="card h-100 language-card">
                                         <div class="card-body d-flex align-items-center">
                                             <div class="form-check mb-0">
+                                                <input id="language_ko_KR" class="form-check-input" type="radio" name="language" value="ko_KR">
+                                                <label for="language_ko_KR" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-kr me-2"></span> 한국어
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
                                                 <input id="language_pt_PT" class="form-check-input" type="radio" name="language" value="pt_PT">
                                                 <label for="language_pt_PT" class="form-check-label d-flex align-items-center">
                                                     <span class="fi fi-pt me-2"></span> Português
@@ -173,7 +199,33 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_sv_SE" class="form-check-input" type="radio" name="language" value="sv_SE">
+                                                <label for="language_sv_SE" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-se me-2"></span> Svenska
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_vi_VN" class="form-check-input" type="radio" name="language" value="vi_VN">
+                                                <label for="language_vi_VN" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-vn me-2"></span> Tiếng Việt
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="col">
                                     <div class="card h-100 language-card">
                                         <div class="card-body d-flex align-items-center">
@@ -186,7 +238,20 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
+                                                <input id="language_uk_UA" class="form-check-input" type="radio" name="language" value="uk_UA">
+                                                <label for="language_uk_UA" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-ua me-2"></span> Українська
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="col">
                                     <div class="card h-100 language-card">
                                         <div class="card-body d-flex align-items-center">
