--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -175,7 +175,7 @@
                     </ul>
                 </li>
                 {% endif %}
-                {% if ((not whois_restrict_to_admin or perm_is_godlike) and whois_enabled) or ((not rdap_restrict_to_admin or perm_is_godlike) and rdap_enabled) or (perm_is_godlike and api_enabled) or (perm_is_godlike and enable_consistency_checks) or (perm_is_godlike and email_previews_enabled) %}
+                {% if ((not whois_restrict_to_admin or perm_is_godlike) and whois_enabled) or ((not rdap_restrict_to_admin or perm_is_godlike) and rdap_enabled) or (perm_is_godlike and api_enabled) or (perm_is_godlike and enable_consistency_checks) or (perm_is_godlike and email_previews_enabled) or (module_nav_items is defined and module_nav_items|length > 0) %}
                 <li class="p-2">
                     <a href="#" class="nav-link text-{{ current_page in ['whois', 'rdap', 'api_keys', 'database_consistency', 'email_previews'] ? 'primary' : 'secondary' }} text-center"><i class="bi bi-tools fs-5"></i></a>
                     <a class="text-{{ current_page in ['whois', 'rdap', 'api_keys', 'database_consistency', 'email_previews'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
@@ -211,6 +211,15 @@
                         <li><a class="dropdown-item" href="{{ base_url_prefix }}/api/docs" target="_blank">
                             <i class="bi bi-book me-2"></i>{% trans %}API Documentation{% endtrans %}
                         </a></li>
+                        {% endif %}
+                        {% if module_nav_items is defined and module_nav_items|length > 0 %}
+                        <li><hr class="dropdown-divider"></li>
+                        {% for item in module_nav_items %}
+                        <li><a class="dropdown-item {{ current_page == item.page_id ? 'active' : '' }}"
+                               href="{{ base_url_prefix }}{{ item.url }}">
+                            <i class="bi bi-{{ item.icon }} me-2"></i>{% trans %}{{ item.label }}{% endtrans %}
+                        </a></li>
+                        {% endfor %}
                         {% endif %}
                     </ul>
                 </li>
