--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -315,7 +315,7 @@
                             <li class="nav-item">
                                 <a class="nav-link nav-link-sm {{ current_page == item.page_id ? 'active' : '' }}"
                                    href="{{ base_url_prefix }}{{ item.url }}">
-                                    <i class="bi bi-{{ item.icon }} me-2"></i>{% trans %}{{ item.label }}{% endtrans %}
+                                    <i class="bi bi-{{ item.icon }} me-2"></i>{{ item.label|trans }}
                                 </a>
                             </li>
                             {% endfor %}
