--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -511,9 +511,18 @@
         <a href="{{ base_url_prefix }}/zones/{{ zone_id }}/records/bulk" class="btn btn-outline-primary btn-sm">
             <i class="bi bi-file-earmark-text me-1 text-primary"></i>{% trans %}Bulk add{% endtrans %}
         </a>
-        <a href="{{ base_url_prefix }}/zones/{{ zone_id }}/edit?export_csv=1" class="btn btn-outline-secondary btn-sm">
-            <i class="bi bi-file-earmark-spreadsheet me-1 text-secondary"></i>{% trans %}Export CSV{% endtrans %}
-        </a>
+        {% if export_formats is defined and export_formats|length > 0 %}
+        <div class="btn-group">
+            <button type="button" class="btn btn-outline-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown">
+                <i class="bi bi-download me-1 text-secondary"></i>{% trans %}Export{% endtrans %}
+            </button>
+            <ul class="dropdown-menu">
+                {% for format in export_formats %}
+                <li><a class="dropdown-item" href="{{ base_url_prefix }}{{ format.url }}"><i class="bi bi-{{ format.icon }} me-2"></i>{{ format.label }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
         {% if not is_reverse_zone and perm_edit != "none" %}
         <a href="{{ base_url_prefix }}/zones/batch-ptr?id={{ zone_id }}" class="btn btn-outline-secondary btn-sm">
             <i class="bi bi-arrow-repeat me-1 text-secondary"></i>{% trans %}Generate PTR{% endtrans %}
